# PhotoShare

./: .env  .env.example  .gitignore  README.md  docker-compose.yml  dump.sql  main.py  pyproject.toml  requirements.txt
docs/source/: conf.py
migration/: env.py
migration/versions/: 456b5a1b1454_init.py  4b1e280e7895_init.py  86f6728bde9c_add_users.py  9c4dbbc77bc7_create_users_table.py  9fc0fc6a1ce7_add_verify_user.py  bb62be3e9c9e_initial_migration.py
migrations/: env.py
migrations/versions/: 05bda9f48b37_init.py  2a5e4aa1a5c7_init.py  383a53816fbf_init2.py  4173faa5f268_init6.py  5a270802c4ce_init3.py  6c5a7ea74043_init5.py  8b2c308fcd9c_init1.py  932497749ec0_init4.py  957e2ffd8cdf_init2.py  9b02ffbe2d7f_add.py  a287fdaa6826_init5.py  aa292a4bf246_init3.py  ae9bd8741a98_new_initial.py  b1a0a60414d1_init.py  d261bf7d5bda_init.py  df6af82056a6_init1.py  e59838a30ee7_activ_user.py
postgres-data/: postmaster.pid
postgres-data/base/1/: 2619  2696  2840  2841  pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16385  16388  16397  16398  (+46 more)
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_xact/: 0000
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py  photos.py  todos.py  users.py
src/routes/: auth.py  comments.py  contacts.py  photos.py  posts.py  todos.py  users.py
src/schemas/: comment.py  photo.py  schema.py  todo.py  user.py
src/services/: auth.py  cloudinary.py  email.py  roles.py
tests/: conftest.py  test_auch.py  test_unit_repository_contacts.py
(+2 files in other folders)
