[tool.poetry]
name = "homework-web-11"
version = "0.1.0"
description = ""
authors = ["Alena-Mishchenko <131773665+Alena-Mishchenko@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.2"
fastapi = "^0.111.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.30"
alembic = "^1.13.1"
asyncpg = "^0.29.0"
pydantic = {extras = ["email"], version = "^2.7.2"}
python-multipart = "^0.0.9"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
gravatar = "^0.1"
libgravatar = "^1.0.4"
fastapi-mail = "^1.4.1"
python-dotenv = "^1.0.1"
redis = "^5.0.5"
pydantic-settings = "^2.3.1"
fastapi-limiter = "^0.1.6"
cloudinary = "^1.40.0"
sphinx = "^7.3.7"
sphinx-rtd-theme = "^2.0.0"
pytest = "^8.2.2"
freezegun = "^1.5.1"
pytest-mock = "^3.14.0"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.3.7"


[tool.poetry.group.test.dependencies]
aiosqlite = "^0.20.0"
pytest-asyncio = "^0.23.7"
httpx = "^0.27.0"


[tool.poetry.group.tast.dependencies]
pytest-cov = "^5.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--doctest-modules"
testpaths = [
    "tests", ]
pythonpath = "."
filterwarnings = "ignore::DeprecationWarning"